# devops-exercise

./: README.md
coin-master-api/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  example.env  pyproject.toml
coin-master-api/coin_master/: __main__.py  api.py  config.py  dependencies.py  logging_config.py  middleware.py  router.py
coin-master-api/coin_master/coin_exchange/: __init__.py  coin_exchange.py  exceptions.py
coin-master-api/coin_master/coin_exchange/exchangerate_api/: exceptions.py  exchange_rate_api.py
