[tool.poetry]
name = "coin-master-api"
version = "0.1.0"
description = "Check currencies exchange rate"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
fastapi = "^0.74.0"
uvicorn = "^0.17.5"
structlog = "^21.5.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.12.2"
rich = "^11.2.0"
vulture = "^2.3"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
